CR000475/force-app/main/default/objects/Opportunity/fields/AI_Influence_Decision__c.field-meta.xml
<CustomField>
    <fullName>AI_Influence_Decision__c</fullName>
    <description>CR000475: Indicates whether AI capabilities (ours or a competitor&apos;s) played a role in the customer&apos;s decision.</description>
    <inlineHelpText>Indicate whether AI capabilities (ours or a competitor&apos;s) played a role in the customer&apos;s decision.</inlineHelpText>
    <label>Did AI Influence the Decision?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Primary Driver</fullName>
            </value>
            <value>
                <fullName>Yes - Secondary Driver</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>