CR000475/force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Data Coverage Did Not Meet Requirements</fullName>
            </value>
            <value>
                <fullName>Platform Usability or Data Structure Limitations</fullName>
            </value>
            <value>
                <fullName>Visualization or Analytical Capabilities Insufficient</fullName>
            </value>
            <value>
                <fullName>AI Capabilities Did Not Meet Expectations</fullName>
            </value>
            <value>
                <fullName>Integration Constraints to other Tools</fullName>
            </value>
            <value>
                <fullName>IT Environment Constraints</fullName>
            </value>
            <value>
                <fullName>Insufficient Business Value Relative to Cost</fullName>
            </value>
            <value>
                <fullName>Budget or Pricing Constraints</fullName>
            </value>
            <value>
                <fullName>Competitive Solution Selected</fullName>
            </value>
            <value>
                <fullName>Internal/Build Solution Preferred</fullName>
            </value>
            <value>
                <fullName>Legal or Compliance Restrictions</fullName>
            </value>
            <value>
                <fullName>Contract Terms not Agreed</fullName>
            </value>
            <value>
                <fullName>Change in Scope or Priorities</fullName>
            </value>
            <value>
                <fullName>Organizational Change/User Transfer</fullName>
            </value>
            <value>
                <fullName>Existing License Coverage</fullName>
            </value>
            <value>
                <fullName>License Consolidation or Reduction</fullName>
            </value>
            <value>
                <fullName>Disqualified - No Valid Opportunity</fullName>
            </value>
            <value>
                <fullName>Pipeline Clean Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>