CR000475/force-app/main/default/objects/Opportunity/fields/Outcome_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Type__c</fullName>
    <description>CR000475: Auto-derived from Win Reason or Loss Reason. Provides a board-level summary category for win/loss analysis.</description>
    <formula>IF(OR(
ISPICKVAL(Win_Reason__c, &quot;High-Quality, Well Structured Data&quot;),
ISPICKVAL(Win_Reason__c, &quot;Broad and Deep Data Coverage&quot;),
ISPICKVAL(Win_Reason__c, &quot;Data Structure and User Interface&quot;),
ISPICKVAL(Win_Reason__c, &quot;No Code Analytics&quot;),
ISPICKVAL(Win_Reason__c, &quot;Powerful Visualization and Charting&quot;),
ISPICKVAL(Win_Reason__c, &quot;Operational Efficiency and Workflow Improvement&quot;),
ISPICKVAL(Win_Reason__c, &quot;AI-Enabled Productivity or Insight&quot;),
ISPICKVAL(Loss_Reason__c, &quot;Data Coverage Did Not Meet Requirements&quot;),
ISPICKVAL(Loss_Reason__c, &quot;Platform Usability or Data Structure Limitations&quot;),
ISPICKVAL(Loss_Reason__c, &quot;Visualization or Analytical Capabilities Insufficient&quot;),
ISPICKVAL(Loss_Reason__c, &quot;AI Capabilities Did Not Meet Expectations&quot;)
), &quot;Product Strength&quot;,

IF(OR(
ISPICKVAL(Win_Reason__c, &quot;Integration with Existing Tools and Workflows&quot;),
ISPICKVAL(Win_Reason__c, &quot;Collaboration, Sharing and Access Model&quot;),
ISPICKVAL(Loss_Reason__c, &quot;Integration Constraints to other Tools&quot;),
ISPICKVAL(Loss_Reason__c, &quot;IT Environment Constraints&quot;)
), &quot;Technology &amp; Integration&quot;,

IF(OR(
ISPICKVAL(Win_Reason__c, &quot;Compelling Value for Price&quot;),
ISPICKVAL(Loss_Reason__c, &quot;Insufficient Business Value Relative to Cost&quot;),
ISPICKVAL(Loss_Reason__c, &quot;Budget or Pricing Constraints&quot;)
), &quot;Commercial&quot;,

IF(OR(
ISPICKVAL(Win_Reason__c, &quot;Adopted as a Core Team Platform&quot;),
ISPICKVAL(Loss_Reason__c, &quot;Competitive Solution Selected&quot;),
ISPICKVAL(Loss_Reason__c, &quot;Internal/Build Solution Preferred&quot;)
), &quot;Competitive&quot;,

IF(OR(
ISPICKVAL(Loss_Reason__c, &quot;Legal or Compliance Restrictions&quot;),
ISPICKVAL(Loss_Reason__c, &quot;Contract Terms not Agreed&quot;)
), &quot;Legal, Compliance, Procurement&quot;,

IF(OR(
ISPICKVAL(Loss_Reason__c, &quot;Change in Scope or Priorities&quot;),
ISPICKVAL(Loss_Reason__c, &quot;Organizational Change/User Transfer&quot;)
), &quot;Timing &amp; Org Change&quot;,

IF(
ISPICKVAL(Loss_Reason__c, &quot;Existing License Coverage&quot;),
&quot;No New Demand&quot;,

IF(OR(
ISPICKVAL(Loss_Reason__c, &quot;License Consolidation or Reduction&quot;),
ISPICKVAL(Loss_Reason__c, &quot;Disqualified - No Valid Opportunity&quot;),
ISPICKVAL(Loss_Reason__c, &quot;Pipeline Clean Up&quot;)
), &quot;Process/Admin Closure&quot;,

NULL))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-populated based on the selected Win or Loss Reason. Represents the top-level outcome category for board-level reporting.</inlineHelpText>
    <label>Outcome Type</label>
    <type>Text</type>
</CustomField>