CR000475/force-app/main/default/objects/Opportunity/fields/Win_Reason__c.field-meta.xml
<CustomField>
    <fullName>Win_Reason__c</fullName>
    <label>Win Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High-Quality, Well Structured Data</fullName>
            </value>
            <value>
                <fullName>Broad and Deep Data Coverage</fullName>
                <label>Broad &amp; Deep Data Coverage</label>
            </value>
            <value>
                <fullName>Data Structure and User Interface</fullName>
            </value>
            <value>
                <fullName>No Code Analytics</fullName>
            </value>
            <value>
                <fullName>Powerful Visualization and Charting</fullName>
            </value>
            <value>
                <fullName>Operational Efficiency and Workflow Improvement</fullName>
            </value>
            <value>
                <fullName>AI-Enabled Productivity or Insight</fullName>
            </value>
            <value>
                <fullName>Integration with Existing Tools and Workflows</fullName>
            </value>
            <value>
                <fullName>Collaboration, Sharing and Access Model</fullName>
            </value>
            <value>
                <fullName>Compelling Value for Price</fullName>
            </value>
            <value>
                <fullName>Adopted as a Core Team Platform</fullName>
            </value>
            <value>
                <fullName>Charting and Visualization</fullName>
                <isActive>false</isActive>
                <label>Charting &amp; Visualization</label>
            </value>
            <value>
                <fullName>Clean, High-Quality Data and Meta-Data</fullName>
                <isActive>false</isActive>
                <label>Clean, High-Quality Data &amp; Meta-Data</label>
            </value>
            <value>
                <fullName>Ease of update, removal of workarounds</fullName>
                <isActive>false</isActive>
                <label>Ease of update, removal of workarounds</label>
            </value>
            <value>
                <fullName>Interconnectivity with existing tools</fullName>
                <isActive>false</isActive>
                <label>Interconnectivity with existing tools</label>
            </value>
            <value>
                <fullName>Need Macrobond as central tool in the team</fullName>
                <isActive>false</isActive>
                <label>Need Macrobond as central tool in the team</label>
            </value>
            <value>
                <fullName>Platform access &amp; storage</fullName>
                <isActive>false</isActive>
                <label>Platform access &amp; storage</label>
            </value>
            <value>
                <fullName>Pricing – cheaper vs alternatives</fullName>
                <isActive>false</isActive>
                <label>Pricing - cheaper vs alternatives</label>
            </value>
            <value>
                <fullName>Pricing - compelling value-add</fullName>
                <isActive>false</isActive>
                <label>Pricing - compelling value-add</label>
            </value>
            <value>
                <fullName>Sharing of finished work</fullName>
                <isActive>false</isActive>
                <label>Sharing of finished work</label>
            </value>
            <value>
                <fullName>Simple Analytics, requiring no coding skills</fullName>
                <isActive>false</isActive>
                <label>Simple Analytics, requiring no coding skills</label>
            </value>
            <value>
                <fullName>User interface and Data structure</fullName>
                <isActive>false</isActive>
                <label>User interface &amp; Data structure</label>
            </value>
            <value>
                <fullName>Width of Data Available</fullName>
                <isActive>false</isActive>
                <label>Width of Data Available</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>