CR000475/force-app/main/default/objects/Opportunity/recordTypes/q2c_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>q2c_Cancellation</fullName>
    <active>true</active>
    <businessProcess>Q2C Cancellation</businessProcess>
    <description>Create this Opportunity for Cancellations.</description>
    <label>Cancellation</label>
</RecordType>