CR000475/force-app/main/default/objects/Opportunity/recordTypes/q2c_New_Business.recordType-meta.xml
<RecordType>
    <fullName>q2c_New_Business</fullName>
    <active>true</active>
    <businessProcess>Q2C New Business</businessProcess>
    <description>Create this Opportunity for New Business deals.</description>
    <label>New Business</label>
</RecordType>