CR000475/force-app/main/default/objects/Opportunity/recordTypes/q2c_Renewal.recordType-meta.xml
<RecordType>
    <fullName>q2c_Renewal</fullName>
    <active>true</active>
    <businessProcess>Q2C Renewal</businessProcess>
    <description>Create this Opportunity for Renewal deals.</description>
    <label>Renewal</label>
</RecordType>