CR000475/force-app/main/default/objects/Opportunity/recordTypes/q2c_Upsell.recordType-meta.xml
<RecordType>
    <fullName>q2c_Upsell</fullName>
    <active>true</active>
    <businessProcess>Q2C Upsell</businessProcess>
    <description>Create this Opportunity for Upsell deals.</description>
    <label>Upsell</label>
</RecordType>